# mymemory

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml
apps/agent/: .env.example  models.json  pyproject.toml
apps/agent/src/agents/common/: model.py  prompts.py
apps/agent/src/agents/memory/: agent.py  cli.py  tools.py
apps/agent/src/agents/orchestrator/: agent.py  cli.py  workers.py
apps/agent/tests/: conftest.py  test_memory_react.py
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/scripts/: ci_smoke.py
apps/api/src/api/: auth.py  config.py  db.py  langfuse_tracing.py  main.py  observability.py
apps/api/src/api/memory/: db.py  embeddings.py  engine.py  generation.py  guardrails.py  remember_gate.py  retrieval.py
apps/api/src/api/prompts/: __init__.py  db.py  defaults.py  eval.py  store.py
apps/api/src/api/routers/: admins.py  auth.py  memory.py  prompts.py
apps/api/tests/: conftest.py  test_admins.py  test_auth.py  test_governance.py  test_guardrails.py  test_guardrails_chat.py  test_health.py  test_langfuse.py  test_memory.py  test_pipeline_chunk.py  test_prompt_eval.py  test_prompt_rollback_drill.py  test_prompts.py  test_remember_gate.py
apps/mcp/: .env.example  README.md  pyproject.toml
apps/mcp/src/mymemory_mcp/: __init__.py  api.py  server.py
apps/mobile/: .gitignore  README.md  app.config.ts  package.json
apps/mobile/app/: _layout.tsx  chat.tsx  index.tsx  login.tsx  memories.tsx  prompts.tsx
apps/mobile/app/prompt/: [key].tsx
apps/mobile/src/: api.ts  auth.tsx  theme.ts  types.ts  useVoice.ts
apps/web/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  next.config.mjs  package.json  postcss.config.mjs
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/chat/: page.tsx
apps/web/app/login/: page.tsx
apps/web/src/: AppBar.tsx  Logo.tsx  api.ts  auth.tsx  providers.tsx  theme.ts  types.ts
data/: .gitignore
data/raw/mortgage/: LN-2026-4418_rate_lock.txt  LN-2026-4418_underwriting.txt
demos/mortgage/: README.md  loan_file.json  seed.py
docs/: data-architecture.md  guardrails.md  job-prep-ai-engineer.md  mortgage-demo.md  observability.md  prompt-ops.md
infra/: .gitignore  README.md  apprunner.tf  deploy.sh  ecr.tf  github_oidc.tf  iam.tf  network.tf  outputs.tf  rds.tf  secrets.tf  terraform.tfvars.example  variables.tf  versions.tf  vpc_endpoints.tf  web.tf
infra/langfuse/: README.md
pipelines/: README.md  chunk.py  ingest.py  report.py
scripts/: dev.sh
(+5 files in other folders)
