[project]
name = "agents"
version = "0.1.0"
description = "LangChain-based memory agent for the MyMemory app"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-aws>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
memory = "agents.memory.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]
