[project]
name = "mymemory-api"
version = "0.1.0"
description = "FastAPI backend for the MyMemory app — vector RAG over personal memories"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    "google-auth>=2.35.0",
    "anthropic[bedrock]>=0.40.0",
    "boto3>=1.35.0",
    "httpx>=0.28.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
api = "api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
