[project]
name = "mymemory-mcp"
version = "0.1.0"
description = "Learning MCP server that exposes MyMemory tools, resources, and prompts to Cursor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.28.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
mymemory-mcp = "mymemory_mcp.server:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
